2011-10-01 Jens Thoms Toerring    <jt@toerring.de>

	* Bits of code cleanup in preparation for new pre-release
	and removal of a bug introduced a few commits earlier.

2011-09-28 Jens Thoms Toerring    <jt@toerring.de>

	* lib/xyplot.c: memory leak in fl_set_xyplot_alphatic()
	found by Alessandro Basili fixed.

2011-09-24 Jens Thoms Toerring    <jt@toerring.de>

	* fdesign/fd_select.c: Bug in undo of alignment fixed.
	* demos/yesno.c, demos/yesno_cb.c: Changed them to have
	them behave exactly identical.

2011-09-11 Jens Thoms Toerring    <jt@toerring.de>

	* Several corrections for problems pointed out by Donato
	Lorenzo that resulted in problems when building with
	aCC on HP-UX and of which some might have led to memory
	corruption (calls of calloc() with sizeof(void) which gcc
	doesn't complain about).

	* lib/handling.c: Guard added to avoid an idle callback
	accidentally being called from within itself.

2011-08-11 Jens Thoms Toerring    <jt@toerring.de>

	* lib/input.c, lib/include/input.h: Changes tp the
	default behavior of the edit keys. Old behavior can
	be obtained via the '--enable-classic-editkeys' option
	to 'configure'.

2011-05-21 Jens Thoms Toerring    <jt@toerring.de>

	* lib/xyplot.c: Two new public functions added:
	fl_get_xyplot_screen_area() and fl_get_xyplot_woorld_area()
	Also a number of bug fixes for double buffered drawing
	and concerning the displayed axes.

2011-01-01 Jens Thoms Toerring    <jt@toerring.de>

	* lib/include/Basic.h: Small change as proposed by
	LukenShiro

2010-12-31 Jens Thoms Toerring    <jt@toerring.de>

	* lib/button.c: Fixed bug that made buttons on which the
	wrong mouse button was released, seem to have been released.

2010-12-29 Jens Thoms Toerring    <jt@toerring.de>

	* fdesign/fd_file.c: Changed the input function
	to accept .fd files so that for pseudo-objects of
	type FL_BEGIN_GROUP and FL_END_GROUP no more than
	a single line with the class name is required.
