@@ -44,8 +44,8 @@ The simplest way to compile this package is:
      `sh ./configure' instead to prevent `csh' from trying to execute
      `configure' itself.
 
-     Running `configure' takes awhile.  While running, it prints some
-     messages telling which features it is checking for.
+     Running `configure' takes a while.  While running it prints some
+     messages telling which features it's checking for.
 
   2. Type `make' to compile the package.
 
@@ -230,4 +230,3 @@ operates.
 
 `configure' also accepts some other, not widely useful, options.  Run
 `configure --help' for more details.
-
